# Head-First-Design-Patterns-Cpp

./: .gitignore  README.md  SWA_Patterns.7z  SWD_Patterns.7z
.ssh/: id_rsa  id_rsa.pub
AdapterPattern/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
AdapterPattern/src/AdapterPattern/: Client.cpp  Client.h  TestClient.cpp  TestClient.h  main.cpp
AdapterPattern/src/AdapterPattern/Adaptee/: Turkey.h  WildTurkey.cpp  WildTurkey.h
AdapterPattern/src/AdapterPattern/Adapter/: TurkeyAdapter.cpp  TurkeyAdapter.h
CommandPattern/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
CommandPattern/src/CommandPattern/: Client.cpp  Client.h  main.cpp
CommandPattern/src/CommandPattern/Command/: Command.h
CommandPattern/src/CommandPattern/Command/ConcreteCommand/: LightOffCommand.cpp  LightOffCommand.h  LightOnCommand.cpp  LightOnCommand.h
CommandPattern/src/CommandPattern/Invoker/: RemoteControl.cpp  RemoteControl.h
CommandPattern/src/CommandPattern/Receiver/: Light.cpp  Light.h
Decorator Pattern IF/Decorator Pattern IF/: Decorator Pattern IF.sln  Decorator Pattern IF.vcxproj  Decorator Pattern IF.vcxproj.filters  main.cpp
Decorator Pattern IF/Decorator Pattern IF/Decorator Pattern IF/: Client.cpp  Client.h
Decorator Pattern IF/Decorator Pattern IF/Decorator Pattern IF/Component/: Beverage.h
Decorator Pattern IF/Decorator Pattern IF/Decorator Pattern IF/Decorator/: BeverageDecorator.cpp  BeverageDecorator.h
Decorator Pattern/Decorator Pattern/: Decorator Pattern.sln  Decorator Pattern.vcxproj  Decorator Pattern.vcxproj.filters  main.cpp
Decorator Pattern/Decorator Pattern/Decorator Pattern/: Client.cpp  Client.h
Decorator Pattern/Decorator Pattern/Decorator Pattern/Component/: Beverage.cpp  Beverage.h
Decorator Pattern/Decorator Pattern/Decorator Pattern/Decorator/: BeverageDecorator.cpp  BeverageDecorator.h
DecoratorPattern/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
DecoratorPattern/src/DecoratorPattern/: Client.cpp  Client.h  main.cpp
DecoratorPattern_IF/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
DecoratorPattern_IF/src/DecoratorPattern_IF/: Client.cpp  Client.h  main.cpp
DecoratorPattern_IF/src/DecoratorPattern_IF/Component/: Beverage.h
DecoratorPattern_IF/src/DecoratorPattern_IF/Component/ConcreteComponent/: DarkRost.cpp  DarkRost.h  Espresso.cpp  Espresso.h
DecoratorPattern_IF/src/DecoratorPattern_IF/Decorator/: BeverageDecorator.cpp  BeverageDecorator.h
DecoratorPattern_IF/src/DecoratorPattern_IF/Decorator/ConcreteDecorator/: MilkDecorator.cpp  MilkDecorator.h  MochaDecorator.cpp  MochaDecorator.h
FacadePattern/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
FacadePattern/src/FacadePattern/: Client.cpp  Client.h  TestClient.cpp  TestClient.h  main.cpp
FacadePattern/src/FacadePattern/Facade/: HomeTheaterFacade.cpp  HomeTheaterFacade.h
FacadePattern/src/FacadePattern/Subsystem/: Amplifier.cpp  Amplifier.h  Player.cpp  Player.h  PopcornPopper.cpp  PopcornPopper.h
MVC/: CMakeLists.txt  MVC.code-workspace
MVC/src/: Client.cpp  Client.h  main.cpp
MVC/src/Controller/ConcreteController/: BeatController.cpp
MVC/src/Model/: BeatModel.cpp  BeatModel.h  ICB_BeatObserver.h  I_BeatModel.h
MVC/src/View/ConcreteView/: DJView.cpp  DJView.h
MVC_App/MVC_App/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
MVC_App/MVC_App/src/Controller/: I_Controller.h
MVC_App/MVC_App/src/Controller/ConcreteController/: BeatController.cpp  BeatController.h
MVC_App/MVC_App/src/Model/: BeatModel.cpp  BeatModel.h  BeatModelWorker.cpp  BeatModelWorker.h  ICB_BpmObserver.h  I_BeatModel.h
MVC_App/MVC_App/src/View/ConcreteView/: DJView.cpp  DJView.h  DJView.ui
Observer Pattern/Observer Pattern/: Observer Pattern.sln  Observer Pattern.vcxproj  Observer Pattern.vcxproj.filters  main.cpp
Observer Pattern/Observer Pattern/Observer Pattern/: Client.cpp  Client.h
ObserverPattern/: CMakeLists.txt  README.md  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
ObserverPattern/src/ObserverPattern/: Client.cpp  Client.h  main.cpp
ObserverPattern/src/ObserverPattern/Observer/: Observer.h
ObserverPattern/src/ObserverPattern/Observer/ConcreteObserver/: CurrentConditionsDisplay.cpp  CurrentConditionsDisplay.h  ThirdPartyDisplay.cpp  ThirdPartyDisplay.h
ObserverPattern/src/ObserverPattern/Subject/: Subject.h  WeatherData.cpp  WeatherData.h
Strategy Pattern/Strategy Pattern/: Strategy Pattern.sln  Strategy Pattern.vcxproj  Strategy Pattern.vcxproj.filters
Strategy Pattern/Strategy Pattern/Strategy Pattern/: Client.cpp  Client.h
StrategyPattern/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
StrategyPattern/src/StrategyPattern/: Client.cpp  Client.h  main.cpp
StrategyPattern/src/StrategyPattern/Context/: Duck.cpp  Duck.cpp.bak  Duck.h  Duck.h.bak
StrategyPattern/src/StrategyPattern/Context/ConcreteContext/: MallardDuck.cpp  MallardDuck.cpp.bak  MallardDuck.h  MallardDuck.h.bak  RubberDuck.cpp  RubberDuck.cpp.bak  RubberDuck.h  RubberDuck.h.bak
StrategyPattern/src/StrategyPattern/Strategy/: IFlyBehavior.h  IQuackBehavior.h
StrategyPattern/src/StrategyPattern/Strategy/ConcreteStrategy/: FlyNoWay.cpp  FlyNoWay.cpp.bak  FlyNoWay.h  FlyWithWings.cpp  FlyWithWings.cpp.bak  FlyWithWings.h  MuteQuack.cpp  MuteQuack.cpp.bak  MuteQuack.h  Quack.cpp  Quack.cpp.bak  Quack.h
TemplateMethodPattern/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
TemplateMethodPattern/src/TemplateMethodPattern/: Client.cpp  Client.h  TestClient.cpp  TestClient.h  main.cpp
TemplateMethodPattern/src/TemplateMethodPattern/AbstractClass/: CaffeineBeverage.cpp  CaffeineBeverage.h
TemplateMethodPattern/src/TemplateMethodPattern/ConcreteClass/: Coffee.cpp  Coffee.h  Tea.cpp  Tea.h
TemplateMethodSort/: CMakeLists.txt  StartCMakeOnLinux.sh  StartCMakeOnWindows.bat
TemplateMethodSort/src/TemplateMethodSort/: Arrays.cpp  Arrays.h  Client.cpp  Client.h  Comparable.h  Duck.cpp  Duck.h  IntArray.cpp  IntArray.h  IntValue.cpp  IntValue.h  main.cpp
(+52 files in other folders)
